[package]
name = "dbt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
regex = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
memchr = "2.4"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
tar = "0.4"
flate2 = { version = "1", features = ["rust_backend"] }
rayon = "1.5"
lazy_static = "1"
